# RepoScout

./: .gitignore  Cargo.toml  Plan.md  README.md  ROADMAP.md  TESTING.md
.githooks/: pre-commit  setup.sh
.github/workflows/: ci.yml
crates/reposcout-api/: Cargo.toml
crates/reposcout-api/src/: bitbucket.rs  github.rs  gitlab.rs  lib.rs  notifications.rs  retry.rs
crates/reposcout-cache/: Cargo.toml
crates/reposcout-cache/src/: cache.rs  lib.rs
crates/reposcout-cli/: Cargo.toml
crates/reposcout-cli/src/: main.rs
crates/reposcout-core/: Cargo.toml
crates/reposcout-core/src/: config.rs  discovery.rs  error.rs  export.rs  health.rs  lib.rs  models.rs  packages.rs  portfolio.rs  registries.rs  search.rs  search_with_cache.rs  theme.rs  token_store.rs  trending.rs
crates/reposcout-core/src/providers/: bitbucket.rs  github.rs  gitlab.rs  mod.rs
crates/reposcout-deps/: Cargo.toml
crates/reposcout-deps/src/: lib.rs  models.rs  parsers.rs
crates/reposcout-semantic/: Cargo.toml
crates/reposcout-semantic/src/: bm25.rs  embeddings.rs  error.rs  index.rs  lib.rs  models.rs  preprocessing.rs  search.rs
crates/reposcout-semantic/tests/: integration_test.rs
crates/reposcout-tui/: Cargo.toml
crates/reposcout-tui/src/: app.rs  code_ui.rs  discovery_ui.rs  help_ui.rs  lib.rs  portfolio_ui.rs  runner.rs  sparkline.rs  theme_ui.rs  ui.rs
