[package]
name = "reposcout-semantic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core dependencies
reposcout-core = { path = "../reposcout-core" }

# Embedding and ML
# Using version 4 to avoid ort compatibility issues
fastembed = "4"

# Vector search
usearch = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
dirs = "6.0"

# Text processing
unicode-segmentation = "1.11"
regex = "1.10"
