[package]
name = "reposcout-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reposcout-core = { path = "../reposcout-core" }
reposcout-api = { path = "../reposcout-api" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
termimad = { workspace = true }
open = "5.3"
