[package]
name = "reposcout-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reposcout-core = { path = "../reposcout-core" }
reposcout-api = { path = "../reposcout-api" }
reposcout-cache = { path = "../reposcout-cache" }
reposcout-deps = { path = "../reposcout-deps" }
reposcout-semantic = { path = "../reposcout-semantic" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
termimad = { workspace = true }
chrono = { workspace = true }
fuzzy-matcher = { workspace = true }
syntect = { workspace = true }
open = "5.3"
dirs-next = "2.0"
arboard = "3.4"
